--- a/package.json
+++ b/package.json
@@ -39,7 +39,8 @@
   "license": "MIT",
   "dependencies": {
     "@babel/runtime": "^7.14.6",
-    "d3": "^7.0.0"
+    "d3": "^7.0.0",
+    "sortablejs": "^1.14.0"
   },
   "devDependencies": {
     "@babel/core": "^7.14.6",
