--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
   "dependencies": {
     "@babel/runtime": "^7.14.6",
     "d3": "^7.0.0",
+    "file-saver": "^2.0.5",
     "sortablejs": "^1.14.0"
   },
   "devDependencies": {
